Bug 931853 - Adjust the frame's vertical position to account for a negative margin larger than its height, in quirks mode.  r=roc